--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
         <input type="text" id="modal-store-name" readonly>
       </div>
       <div class="form-group">
-        <label for="modal-contact-date">Contact Date:</label>
+        <label for="modal-contact-date">Contact Date (Date entered must be within valid month range):</label>
         <input type="date" id="modal-contact-date" required>
       </div>
       <div class="form-group">
