Initial commit for Render deployment

--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="modal-action">Action:</label>
+        <label for="modal-action">Action (Suitable for type of churn):</label>
         <select id="modal-action" required>
           <option value="">Select action</option>
         </select>
@@ -116,17 +116,17 @@
         <textarea id="modal-note" rows="3"></textarea>
       </div>
       <div class="form-group churn-field">
-        <label for="modal-why-not-reawaken">Why not re-awaken yet?</label>
+        <label for="modal-why-not-reawaken">Why not re-awaken yet? (Suitable for type of churn)</label>
         <select id="modal-why-not-reawaken" required>
           <option value="">Select reason</option>
         </select>
       </div>
       <div class="form-group churn-field">
-        <label for="modal-churn-month">Churn Month (Last Order Date):</label>
+        <label for="modal-churn-month">Churn Month (First month in churn series):</label>
         <input type="text" id="modal-churn-month" readonly>
       </div>
       <div class="form-group active-field">
-        <label for="modal-active-month">Active Month:</label>
+        <label for="modal-active-month">Active Month (The month in which the customer has GMV):</label>
         <select id="modal-active-month" required>
           <option value="">Select Active Month</option>
         </select>
