Initial commit for Render deployment

--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="modal-action">Action (Suitable for type of churn):</label>
+        <label for="modal-action">Action:</label>
         <select id="modal-action" required>
           <option value="">Select action</option>
         </select>
