Initial commit for Render deployment

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
       <p><strong>Email:</strong> <span id="pic-email">N/A</span></p>
       <p><strong>Team:</strong> <span id="pic-team">N/A</span></p>
       <p><strong>Subteam:</strong> <span id="pic-subteam">N/A</span></p>
-      <p><strong>Last updated customer list data:</strong> <span id="pic-subteam">11:00 am - 13/05/2025"</span></p>
+      <p><strong>Last updated customer list:</strong> <span id="pic-subteam">11:00 am - 13/05/2025</span></p>
     </div>
     <div class="header-animation">
       <img src="image/kamereo_run.png" alt="Kamereo Running" class="running-image">
