--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
       <p><strong>Email:</strong> <span id="pic-email">N/A</span></p>
       <p><strong>Team:</strong> <span id="pic-team">N/A</span></p>
       <p><strong>Subteam:</strong> <span id="pic-subteam">N/A</span></p>
-      <p><strong>Last updated customer list:</strong> <span id="pic-subteam">11:00 am - 12/05/2025</span></p>
+      <p><strong>Last updated customer list:</strong> <span id="last-updated"></span></p>
     </div>
     <div class="header-animation">
       <img src="image/kamereo_run.png" alt="Kamereo Running" class="running-image">
@@ -84,6 +84,16 @@
         <label for="modal-store-name">Store Name:</label>
         <input type="text" id="modal-store-name" readonly>
       </div>
+      <div class="form-group churn-field">
+        <label for="modal-churn-month">Churn Month (First month in churn series):</label>
+        <input type="text" id="modal-churn-month" readonly>
+      </div>
+      <div class="form-group active-field">
+        <label for="modal-active-month">Active Month (The month in which the customer has GMV):</label>
+        <select id="modal-active-month" required>
+          <option value="">Select Active Month</option>
+        </select>
+      </div>
       <div class="form-group">
         <label for="modal-contact-date">Contact Date (Date entered must be within valid month range):</label>
         <input type="date" id="modal-contact-date" required>
@@ -118,18 +128,8 @@
       </div>
       <div class="form-group churn-field">
         <label for="modal-why-not-reawaken">Why not re-awaken yet? (Suitable for type of churn)</label>
-        <select id="modal-why-not-reawaken" required>
+        <select id="modal-why-not-reawaken">
           <option value="">Select reason</option>
-        </select>
-      </div>
-      <div class="form-group churn-field">
-        <label for="modal-churn-month">Churn Month (First month in churn series):</label>
-        <input type="text" id="modal-churn-month" readonly>
-      </div>
-      <div class="form-group active-field">
-        <label for="modal-active-month">Active Month (The month in which the customer has GMV):</label>
-        <select id="modal-active-month" required>
-          <option value="">Select Active Month</option>
         </select>
       </div>
       <button id="submit-action" class="submit-button">Submit</button>
