Initial commit for Render deployment

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Sign in to Kamereo Churn Management system. Only @kamereo.vn accounts are allowed.">
-  <title>Sign In - Kamereo Churn Management</title>
+  <meta name="description" content="Sign in to Kamereo Action Management system. Only @kamereo.vn accounts are allowed.">
+  <title>Sign In - Kamereo Action Management</title>
   <link rel="stylesheet" href="login.css">
 </head>
 <body>
   <div class="container">
-    <img src="image/logo.png" alt="Kamereo Churn Management Logo" class="logo">
-    <h1>Welcome to Kamereo Churn Management</h1>
+    <img src="image/logo.png" alt="Kamereo Logo" class="logo">
+    <h1>Welcome to Kamereo Action Management</h1>
     <p class="note">Only Kamereo company accounts (@kamereo.vn) can sign in.</p>
     <div id="g_id_onload"
          data-client_id="252140887716-576f1gevc9hck56960jq4f0vsaq5rl5h.apps.googleusercontent.com"
