--- a/home.html
+++ b/home.html
@@ -48,7 +48,9 @@
             </select>
           </th>
           <th>
-            <button id="recent-actions-filter" class="filter-button">Recent Actions</button>
+            <select id="week-filter" class="filter-button">
+              <option value="">All Weeks</option>
+            </select>
           </th>
         </tr>
         <tr>
