--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
          data-shape="rectangular"
          data-logo_alignment="left">
     </div>
+    <div class="separator">
+      <span>OR</span>
+    </div>
+    <div class="manual-login">
+      <form id="manual-login-form">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="Enter your Kamereo email" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Enter your password" required>
+        </div>
+        <button type="submit" class="login-button">Sign In</button>
+      </form>
+    </div>
     <p id="login-error" class="error"></p>
     <div id="loading" class="loading-overlay">
       <div class="spinner"></div>
