Update link hubspot

--- a/home.html
+++ b/home.html
@@ -136,6 +136,10 @@
           <option value="">Select reason</option>
         </select>
       </div>
+      <div class="form-group">
+        <label for="modal-link-hubspot">Link Hubspot:</label>
+        <input type="url" id="modal-link-hubspot" placeholder="https://app.hubspot.com/..." />
+      </div>
       <button id="submit-action" class="submit-button">Submit</button>
     </div>
   </div>
