--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         <button id="modal-ok" class="modal-button" tabindex="0">OK</button>
       </div>
     </div>
+      <!-- Thêm footer với BOS Team -->
+    <div class="bos-footer">
+      <img src="image/bos-logo.png" alt="BOS Logo" class="bos-logo">
+    </div>
   </div>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="login.js"></script>
