--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
       <p><strong>Team:</strong> <span id="pic-team">N/A</span></p>
       <p><strong>Subteam:</strong> <span id="pic-subteam">N/A</span></p>
       <p><strong>Last updated customer list:</strong> <span id="last-updated"></span></p>
-      <p><strong>Video hướng dẫn 🎥: </strong><a href="https://www.youtube.com/watch?v=o0tkkG4PPUg" target="_blank">Youtube</a></p>
+      <p><strong>Video tutorial 🎥: </strong><a href="https://www.youtube.com/watch?v=o0tkkG4PPUg" target="_blank">Youtube</a></p>
     </div>
     <div class="header-animation">
       <div class="chat-container">
